# maximus.ai

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  EXAMPLES.md  PRD.md  REACT_TERMINAL_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  playwright.config.js  pyproject.toml  test_agent_tool.py  test_cli_simple.py  test_debug.py  test_full.py  test_maximus.py  test_minimal.py  test_output.py  test_step.py  test_system.py  test_tool_call.py
.github/workflows/: ci.yml
.kilo/plans/: 1778257457368-cosmic-garden.md
maximus-terminal/: index.html  package-lock.json  package.json  start-server.ps1  vitest.config.ts
maximus-terminal/src/: App.tsx  index.css
maximus-terminal/src/components/: AgentVisualizer.tsx  ChartRenderer.tsx  CodeRain.tsx  CommandLine.tsx  DiffPreview.tsx  MarkdownRenderer.tsx  OutputDisplay.tsx  ParticleBackground.tsx  TabBar.tsx  TerminalContainer.tsx  ThemeCustomizer.tsx  ThemeSwitcher.tsx
maximus-terminal/src/hooks/: useMoodLighting.ts  useVimMode.ts  (+1 more)
src/maximus/: __init__.py  __main__.py  cli.py  hooks.py  models.py  security.py
tests/: conftest.py  test_all_tools.py  test_integration.py  test_new_architecture.py  test_repo_adapters.py  test_session_persistence.py  test_spawner.py
tests/discovery/: test_pypi.py
tests/e2e/: test_terminal_ui.py
tests/integration/: __init__.py  conftest.py  test_e2e.py
tests/mcp/: test_mcp.py
tests/sandbox/: test_sandbox.py
tests/unit/: test_models.py  test_tools.py
(+101 files in other folders)
